--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,3 +1,3 @@
 @import 'reset.css';
 @import 'content.css';
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Neucha&family=Pangolin&family=Shantell+Sans:ital,wght@0,300;1,300&family=Space+Grotesk:wght@700&display=swap')
