--- a/stylesheet/content.css
+++ b/stylesheet/content.css
@@ -1,14 +1,22 @@
-body {
-  background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(33,83,21,1) 100%);
-  overflow: hidden;
-  position: relative;
-  font-size: 23vw;
-  line-height: 409px;
-  width: 100vw;
-  height: 100vh;;
-  aspect-ratio: 1 / 2.5;
+html {
+  cursor: url("../images/default_cursor.svg"), default;
 }
 
+body {
+  overflow: hidden;
+  font-family: 'Pangolin';
+  background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(33,83,21,1) 100%);
+}
+
+
+/* ВСТУПИТЕЛЬНЫЙ ЭКРАН */
+.block1 {
+  width: 100vw;
+  height: 100vh;
+  background-image: url('../images/stars.svg');
+  display: block;
+  overflow: hidden;
+}
 .frog {
   background: url('../images/frog.svg');
   background-size: 100% 100%;
@@ -19,23 +27,59 @@ body {
   left: 28%;
 }
 
+.help {
+  position: absolute;
+  width: 1209px;
+  height: 55px;
+  left: 200px;
+  top: 50%;
+  
+  font-family: 'Pangolin';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 55px;
+  
+  color: #FFFFFF;
+  z-index: 3; 
+}
+.start {
+  position: absolute;
+  width: 300px;
+  height: 50px;
+  left: 40%;
+  top: 80%;
+
+  font-family: 'Pangolin';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 60px;
+  line-height: 80px;
+  z-index: 3;
+
+
+color: #FFFFFF;
+}
 .box {
   display: flex;
+  position: absolute;
+    width: 109px;
+    height: 109px;
 }
 .box .eye {
-  position: relative;
+  position: absolute;
   display: block;
-  left: 25%;
+  width: 109px;
+  height: 109px;
+  left: 10px;
   top: 200px;
   border-radius: 50%;
-  height: 109px;
-  width: 109px;
   background-color: #E27018;
   margin: 0 100px;
   z-index: 2;;
 }
 .box .eye::before {
-  top: 50%;
+  top: 5px;
   left: 35px;
   transform: translate(-50%, -50%);
   width: 50px;
@@ -61,8 +105,8 @@ body {
   position: absolute;
   width: 29%;
   height: 42%;
-  left: -1%;
-  top: -1%;
+  left: -10%;
+  top: -10%;
 } 
 
 .leaf2 {
@@ -99,12 +143,12 @@ body {
 
 
 /* ОСНОВНАЯ ИГРА */
-
-#game {
+.block2 {
   width: 100vw;
   height: 100vh;
-  display: block;
   background-image: url('../images/stars.svg');
+  display: hidden;
+  overflow: hidden;
 }
 
 #ground{
