--- a/stylesheet/content.css
+++ b/stylesheet/content.css
@@ -61,33 +61,54 @@ body {
 color: #FFFFFF;
 }
 .box {
-  display: flex;
   position: absolute;
-    width: 109px;
-    height: 109px;
-}
-.box .eye {
-  position: absolute;
-  display: block;
   width: 109px;
   height: 109px;
-  left: 10px;
-  top: 200px;
-  border-radius: 50%;
-  background-color: #E27018;
-  margin: 0 100px;
-  z-index: 2;;
 }
-.box .eye::before {
-  top: 5px;
-  left: 35px;
-  transform: translate(-50%, -50%);
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background: #000;
+.eye1 {
   position: absolute;
-  }
+  display: inline-block;
+  justify-content: space-between;
+  border-radius: 50%;
+  height: 90px;
+  width: 100px;
+  background: #E27018;
+  left: 540px;
+  top: 73px;
+  z-index: 3;
+}
+.eye1:after {
+  position: absolute;
+  bottom: 17px;
+  right: 10px;
+  width: 30px;
+  height: 30px;
+  background: #2D2D2D;
+  border-radius: 50%;
+  content: " ";
+}
+.eye2 {
+  position: absolute;
+  display: inline-block;
+  justify-content: space-between;
+  border-radius: 50%;
+  height: 90px;
+  width: 100px;
+  background: #E27018;
+  left:840px;
+  top: 100px;
+  z-index: 3;
+}
+.eye2:after {
+  position: absolute;
+  bottom: 17px;
+  right: 10px;
+  width: 30px;
+  height: 30px;
+  background: #2D2D2D;
+  border-radius: 50%;
+  content: " ";
+}
 
 .leaf {
   background: url('../images/leaf.svg');
