--- a/stylesheet/content.css
+++ b/stylesheet/content.css
@@ -3,8 +3,6 @@ html {
 }
 
 body, html {
-  width: 100%;
-  height: 900px;
   font-size: 23vw;
   line-height: 409px;
   display: block;
@@ -17,6 +15,7 @@ body, html {
 
 /* ВСТУПИТЕЛЬНЫЙ ЭКРАН */
 .block1 {
+  overflow: hidden;
   width: 100%;
   height: 100%;
   background-image: url('../images/stars.svg');
@@ -26,8 +25,8 @@ body, html {
 .frog {
   background: url('../images/frog.svg');
   background-size: 100% 100%;
-  width: 615px;
-  height: 847px;
+  width: 42%;
+  height: 94%;
   position: absolute;
   bottom: 0;
   left: 28%;
@@ -35,82 +34,71 @@ body, html {
 
 .help {
   position: absolute;
-  width: 1209px;
-  height: 55px;
-  left: 200px;
-  top: 50%;
+  left: 13%;
+  bottom: 25%;
   
   font-family: 'Pangolin';
-  font-style: normal;
   font-weight: 400;
-  font-size: 48px;
-  line-height: 55px;
+  font-size: 15%;
+  line-height: 100%;
   
   color: #FFFFFF;
   z-index: 3; 
 }
 .start {
   position: absolute;
-  width: 300px;
-  height: 50px;
   left: 40%;
   top: 80%;
 
   font-family: 'Pangolin';
-  font-style: normal;
   font-weight: 400;
-  font-size: 60px;
-  line-height: 80px;
+  font-size: 15%;
+  line-height: 100%;
   z-index: 3;
 
 
-color: #FFFFFF;
-}
-.box {
-  position: absolute;
-  width: 109px;
-  height: 109px;
-}
+color: #FFFFFF; }
+
 .eye1 {
   position: absolute;
-  display: inline-block;
-  justify-content: space-between;
+  padding-top: 16%;
   border-radius: 50%;
-  height: 90px;
-  width: 100px;
+  height: auto;
+  width: 16%;
   background: #E27018;
-  left: 540px;
-  top: 73px;
+  left: 23%;
+  top: 1%;
   z-index: 3;
 }
+
 .eye1:after {
   position: absolute;
-  bottom: 17px;
-  right: 10px;
-  width: 30px;
-  height: 30px;
+  padding-top: 30%;
+  top: 5%;
+  left: 20%;
+  width: 30%;
+  height: auto;
   background: #2D2D2D;
   border-radius: 50%;
   content: " ";
 }
 .eye2 {
   position: absolute;
-  display: inline-block;
-  justify-content: space-between;
+  padding-top: 16%;
   border-radius: 50%;
-  height: 90px;
-  width: 100px;
+  height: auto;
+  width: 16%;
   background: #E27018;
-  left:840px;
-  top: 100px;
+  right: 12%;
+  top: 5%;
   z-index: 3;
 }
 .eye2:after {
   position: absolute;
-  bottom: 17px;
-  right: 10px;
-  width: 30px;
-  height: 30px;
+  padding-top: 30%;
+  top: 5%;
+  left: 20%;
+  width: 30%;
   background: #2D2D2D;
   border-radius: 50%;
   content: " ";
@@ -218,7 +206,7 @@ color: #FFFFFF;
   width: 100vw;
   height: 100vh;
   background-image: url('../images/stars.svg');
-  display: block;
+  display: hidden;
   overflow: hidden;
 }
 
@@ -233,9 +221,9 @@ color: #FFFFFF;
 }
 
 #red {
-  padding-top: 30%;
+  padding-top: 25%;
   position: relative;
-  width: 30%;
+  width: 25%;
   height: auto;
   left: 37%;
   top: 10%;
@@ -244,21 +232,23 @@ color: #FFFFFF;
   background: #FF0000;
 }
 #yellow {
+  padding-top: 25%;
   position: relative;
-  width: 150px;
-  height: 150px;
+  width: 25%;
+  height: auto;
   left: 37%;
-  top: 15%;
+  top: 13%;
   border-radius: 50%;
 
   background: #FFDB5B;
 }
 #green {
+  padding-top: 25%;
   position: relative;
-  width: 150px;
-  height: 150px;
+  width: 25%;
+  height: auto;
   left: 37%;
-  top: 20%;
+  top: 15%;
   border-radius: 50%;
 
   background: #75EE81;
@@ -266,10 +256,11 @@ color: #FFFFFF;
 
 .squarebuttons {
   position: absolute;
-  width: 15%;
-  height: 25%;
-  left: 66%;
-  top: 7%;
+  padding-top: 14%;
+  width: 14%;
+  height: auto;
+  left: 60%;
+  top: 3%;
 
   background: #000000;
 }
@@ -303,23 +294,104 @@ color: #FFFFFF;
 }
 .button {
   position: relative;
-  width: 40px;
-  height: 40px;
+  padding-top: 23%;
+  width: 23%;
+  height: auto;
 }
 
-.roundbuttons {
-  position: absolute;
-  width: 15%;
-  height: 25%;
-  left: 66%;
-  top: 40%;
-
-  background: #000000;
-}
 
 .one {
   background: #D9D9D9;
 }
 .two {
   background: #D9D9D9;
+}
+
+.roundbuttons {
+  position: absolute;
+  padding-top: 14%;
+  width: 14%;
+  height: auto;
+  left: 60%;
+  top: 35%;
+
+  background: #000000;
+}
+
+.rbutton {
+position: absolute;
+padding-top: 23%;
+width: 23%;
+height: auto;
+}
+
+.white {
+  background-image: url('../images/white.svg');
+  background-size: 100% 100%;
+  padding-top: 28%;
+  width: 28%;
+  height: auto;
+  left: 10%;
+  top: 8%
+}
+.orange {
+  background-image: url('../images/orange.svg');
+  background-size: 100% 100%;
+  padding-top: 28%;
+  width: 28%;
+  height: auto;
+  left: 60%;
+  top: 8%;
+}
+
+.lime {
+  background-image: url('../images/lime.svg');
+  background-size: 100% 100%;
+  padding-top: 28%;
+  width: 28%;
+  height: auto;
+  left: 10%;
+  top: 60%;
+}
+
+.green {
+  background-image: url('../images/green.svg');
+  background-size: 100% 100%;
+  padding-top: 28%;
+  width: 28%;
+  height: auto;
+  left: 60%;
+  top: 60%;
+}
+
+.lever {
+  position: absolute;
+  padding-top: 14%;
+  width: 14%;
+  height: auto;
+  left: 60%;
+  top: 68%;
+
+  background: #000000;
+}
+
+.pull {
+  position: absolute;
+  width: 146px;
+  height: 24px;
+  left: 1006px;
+  top: 766px;
+  
+  background: #FFFFFF;
+  transform: rotate(-90deg);
+}
+
+#froggy {
+  background-image: url('../images/character.svg');
+  background-size: cover;
+  width: 88px;
+  height: 82px;
+  position: absolute;
+  bottom: 0; 
+  right: 5%;
 }
