--- a/stylesheet/content.css
+++ b/stylesheet/content.css
@@ -300,10 +300,10 @@ color: #FFFFFF; }
 }
 
 
-.one {
+#one {
   background: #D9D9D9;
 }
-.two {
+#two {
   background: #D9D9D9;
 }
 
@@ -403,4 +403,36 @@ height: auto;
   position: absolute;
   bottom: 0; 
   right: 5%;
+}
+
+
+/* ТРЕТЬЯ МИНИ ИГРА */
+
+.block4 {
+  width: 100vw;
+  height: 100vh;
+  background-image: url('../images/stars.svg');
+  display: hidden;
+  overflow: hidden;
+}
+
+.frogcharacter {
+    background-image: url('../images/character.svg');
+    background-size: cover;
+    width: 88px;
+    height: 82px;
+    position: absolute;
+    bottom: 0; 
+    right: 50%;
+
+}
+
+.triangle {
+  background-image: url('..images/triangle.svg');
+  background-size: 100% 100%;
+  width: 20%;
+  height: 20%;
+  position: absolute;
+  top: 2%;
+  left: 10%;
 }
