--- a/stylesheet/content.css
+++ b/stylesheet/content.css
@@ -4,14 +4,13 @@ html {
 
 
 body, html {
-  width: 1440px;
+  aspect-ratio: 1/1.5;
   font-size: 23vw;
   line-height: 409px;
   display: block;
   overflow: hidden;
   font-family: 'Pangolin';
   background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(33,83,21,1) 100%);
-  aspect-ratio: 1 / 1;
 }
 
 
@@ -461,11 +460,11 @@ height: auto;
 
 #froggy {
   background-image: url('../images/character.svg');
-  background-size: cover;
-  width: 88px;
-  height: 82px;
+  background-size: 100% 100%;
+  width: 10%;
+  height: 10%;
   position: absolute;
-  bottom: 0; 
+  bottom: 2%; 
   right: 5%;
 }
 
@@ -514,21 +513,25 @@ height: auto;
   color: black; }
 
 .ewleaf1 {
+  background-image: url('../images/ewleaf1.svg');
+  background-size: 100% 100%;
   width: 40%;
   height: 40%;
-  object-fit: contain;
   display: block;
 }
 .ewleaf2 {
-  object-fit: contain;
+  background-image: url('../images/ewleaf2.svg');
+  background-size: 100% 100%;
   width: 40%;
   height: 40%;
   display: block;
+  object-fit: cover;
 }
 .ewleaf3 {
-  object-fit: contain;
-  width: 80%;
-  height: 80%;
+  background-image: url('../images/ewleaf3.svg');
+  background-size: 100% 100%;
+  width: 60%;
+  height: 60%;
   display: block;
 }
 
@@ -547,7 +550,7 @@ height: auto;
 .uberi3 {
   position: absolute;
   top: 60%;
-  left: -14%;
+  left: -10%;
   transform: rotate(-90deg);
 }
 
@@ -574,43 +577,42 @@ height: auto;
 .ubral2 {
   position: absolute;
   left: 70%;
-  top: 0%;
+  top: -15%;
 }
 .ubral3 {
   position: absolute;
   left: 20%;
-  top: 0%;
+  top: -15%;
 }
 
 .ubral4 {
   position: absolute;
   left: -15%;
   top: 15%;
-  transform: scale(10%);
   transform: rotate(-90deg);
 }
 
 .uberu1 {
   position: absolute;
-  left: -20%;
+  right: 0%;
   bottom: -10%;
   transform: rotate(-90deg);
 }
 .uberu2 {
   position: absolute;
-  bottom: -20%;
-  right: -10%;
+  bottom: -10%;
+  right: 0;
   transform: rotate(-90deg);
 }
 .uberu3 {
   position: absolute;
-  right: -30%;
-  top: 15%;
-  transform: rotate(180deg);
+  right: 0%;
+  top: -10%;
+  transform: rotate(90deg);
 }
 .uberu4 {
   position: absolute;
-  left: 25%;
+  right: 15%;
   top: -10%;
   transform: rotate(90deg);
 }
