--- a/stylesheet/content.css
+++ b/stylesheet/content.css
@@ -31,21 +31,24 @@ body, html {
   position: absolute;
   top: 10%;
   right: 10%;
+  z-index: 3;
 }
 .frog {
-  background: url('../images/frog.svg');
-  background-size: 100% 100%;
-  width: 42%;
-  height: 94%;
+  width: 400px;
+  height: 700px;
   position: absolute;
-  bottom: 0;
-  left: 15%;
+  bottom: -17%;
+  left: 25%;
 }
-
+.image {
+  background-size: 100%;
+  width: 100%;
+  height: 100%;
+}
 .help {
   position: absolute;
   left: 2%;
-  top: 20%;
+  top: 23%;
   text-align: center;
   
   font-family: 'Pangolin';
@@ -59,7 +62,7 @@ body, html {
 .start {
   position: absolute;
   left: 35%;
-  bottom: 35%;
+  bottom: 37%;
   text-align: center;
 
   font-family: 'Pangolin';
@@ -72,13 +75,13 @@ body, html {
 
 .eye1 {
   position: absolute;
-  padding-top: 16%;
+  padding-top: 19%;
   border-radius: 50%;
   height: auto;
-  width: 16%;
+  width: 19%;
   background: #E27018;
-  left: 23%;
-  top: 1%;
+  left: 18%;
+  top: 13%;
   z-index: 3;
 }
 
@@ -95,13 +98,13 @@ body, html {
 }
 .eye2 {
   position: absolute;
-  padding-top: 16%;
+  padding-top: 19%;
   border-radius: 50%;
   height: auto;
-  width: 16%;
+  width: 19%;
   background: #E27018;
-  right: 12%;
-  top: 5%;
+  right: 4%;
+  top: 16%;
   z-index: 3;
 }
 .eye2:after {
