--- a/stylesheet/responsive.css
+++ b/stylesheet/responsive.css
@@ -1,6 +1,7 @@
 /* экран для 1920 */
 @media screen and (min-width: 1440px) and (max-width: 1920px) {
     body, html {
+      background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(33,83,21,1) 100%);
       line-height: 494px;
     }
     .eye1 {
@@ -21,6 +22,7 @@
   /* экран для 1440 */
   @media screen and (min-width: 1280px) and (max-width: 1440px) {
     body, html {
+      background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(33,83,21,1) 100%);
       line-height: 409px;
     }
   }
@@ -28,17 +30,17 @@
   /* экран для 1280 */
   @media screen and (min-width: 1024px) and (max-width: 1280px) {
     body, html {
-      /* height: 434vh; */
+     
       line-height: 356px;
       width: 1280px;
       height: 900px;
     }
   }
-  
 
+  /* экран для 1024 */
 @media screen and (min-width: 834px) and (max-width: 1024px) {
     body, html {
-
+    
       line-height: 294px;
     }
 
@@ -73,11 +75,10 @@
       }
     }
   
-
+/* экран 834 */
   @media screen and (min-width: 414px) and (max-width: 834px){
   
     body, html {
-      line-height: 238px;
       overflow: hidden;
   }
 
@@ -263,9 +264,5 @@
       top: 29%;
       left: 14%;
     }
-
-}
-
-@media screen and (min-width: 320px) and (max-width:  414px) {
 
 }
